--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,86 @@
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
 
+    const fifteen = inventors.filter(inventor => (inventor.year < 1600 && inventor.year >= 1500));
+    console.table(fifteen); 
+
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+
+    const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.table(fullNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
+    inventors.sort((a, b) => a.year - b.year);
+    console.table(inventors);
+
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
 
+    const combinedLifetimes = inventors.reduce((sum, inventor) => sum + (inventor.passed - inventor.year), 0);
+    console.log(combinedLifetimes);
+
     // 5. Sort the inventors by years lived
+
+    inventors.sort((a,b) => (b.passed - b.year) - (a.passed - a.year))
+    console.table(inventors)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+      // const category = document.querySelector(".mw-category");
+      // const links = Array.from(category.querySelector("a"));
+      // const de = links
+      //             .map(link => link.textContent)
+      //             .filter(boul => boul.includes("de"));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+
+    people.sort((a, b) => {
+      let aLast = a.split(",")[0]
+      let bLast = b.split(",")[0]
+      return aLast.localeCompare(bLast)
+    });
+
+    console.table(people);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    // const unique = data.reduce((arr, vehicle) => {
+    //   if (arr.includes(vehicle) === false) {
+    //     arr.push(vehicle)
+    //   }
+    //   return arr
+    // }, [])
+
+    // const uniqueCount = unique.reduce((obj, vehicle) => {
+    //   let vehicleCount = 0
+    //   data.forEach((d) => {
+    //     if (vehicle === d) {
+    //       vehicleCount++
+    //     }
+    //   })
+
+    //   obj[vehicle] = vehicleCount;
+    //   return obj
+
+    // }, new Object())
+
+    const uniqueCount = data.reduce((obj, vehicle) => {
+      if(!obj[vehicle]) {
+        obj[vehicle] = 0
+      }
+
+      obj[vehicle]++
+      return obj
+    }, {})
+
+    console.table(uniqueCount)
   </script>
 </body>
 </html>
